--- a/release/composer.json
+++ b/release/composer.json
@@ -17,7 +17,14 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "topthink/framework": "5.0.*"
+        "topthink/framework": "5.0.*",
+        "jaeger/querylist": "^4.1",
+        "jaeger/querylist-phantomjs": "^4.0",
+        "jaeger/querylist-absolute-url": "^4.0",
+        "jaeger/querylist-curl-multi": "^4.0",
+        "jaeger/querylist-rule-baidu": "^4.0",
+        "liesauer/ql-plugin-simpleform": "^4.0",
+        "smalot/pdfparser": "^0.14.0"
     },
     "autoload": {
         "psr-4": {
